--- a/src/scss/_bootstrap-override.scss
+++ b/src/scss/_bootstrap-override.scss
@@ -26,7 +26,7 @@ body {
 .btn {
   font-family: $font-family;
   font-weight: $font-weight-semibold;
-  border-radius: $border-radius-full;
+  border-radius: $border-radius-md;
   transition: all 0.3s ease;
 }
 
