--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -44,8 +44,8 @@
     border-color: #dee2e6;
   }
 
-  &.active:hover {
-    background: darken($primary-color, 10%);
-    border-color: darken($primary-color, 10%);
-  }
+  // &.active:hover {
+  //   background: darken($primary-color, 10%);
+  //   border-color: darken($primary-color, 10%);
+  // }
 }
